--- a/quantum_inf_processing/sections/section8.tex
+++ b/quantum_inf_processing/sections/section8.tex
@@ -75,7 +75,7 @@
         This only works if we adopt the convention $ A \otimes B = \begin{pmatrix} A_{00}B & A_{01}B \\ A_{10}B & A_{11}B \end{pmatrix} $.
         \begin{remark}{Example}
             \begin{tcolorbox}[rouge]
-               Let $\rho_{AB}=\ket{\psi_{Ab}}\bra{\psi_{AB}}$, where $\ket{\psi_{AB}}=\ket{0}_A \otimes \ket{+}_B$. Then 
+               Let $\rho_{AB}=\ket{\psi_{AB}}\bra{\psi_{AB}}$, where $\ket{\psi_{AB}}=\ket{0}_A \otimes \ket{+}_B$. Then 
                \[\rho_{AB}= \sigma_A \otimes \sigma_B \implies Tr_B\left(\rho_{AB}\right)=\sigma_A.\]
                Let's compute:
                \begin{align*} 
@@ -166,7 +166,7 @@
         \end{remark}
         \begin{theoreme}
             \important{The Schmidt decomposition theorem} says that any state $\ket{\psi}_{AB}$ can be express as 
-            \[\sum_{ i }p_i\ket{\phi_A}_i \otimes \ket{\phi_B}_i, \mathspace \mathspace p_i \geq 0.\]
+            \[\sum_{ i }^{r}p_i\ket{\phi_A}_i \otimes \ket{\phi_B}_i, \mathspace \mathspace p_i \geq 0.\]
             $\{\ket{\phi_A}_i\}$ is orthonormal for A and $\{\ket{\phi_B}_i\}$ is orthonormal for B, but they don't need to form a basis.
         \end{theoreme}
         \begin{remark}{Remark}
